--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -4,6 +4,8 @@
 
 \TODO{`in' simple form vs.\ `on' simple form.}
 
+\TODO{Alessio said: `\emph{I think it's a mistake to consider a derivation weakly streamlined with respect to a polarity. It would be better to say that it is weakly streamlined with the respect to the positive subflow, given a polarity, or something like this.}'}
+
 %---------------------------------------
 \begin{definition}\label{definition:FlowNormalForms}
 An atomic flow is
