Added statement about size to the soundness theorem

--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -40,7 +40,7 @@ The condition on the atomic flow $\psi$ in Definition~\ref{definition:IsolatedSu
 
 %---------------------------------------------------------
 \begin{theorem}\label{theorem:SoundIsolatedSubflowRemoval}
-Reduction\/ $\to_\fris$ is sound.
+Reduction\/ $\to_\fris$ is sound; moreover, if $\Phi\to_\fris\Psi$, then the size of $\Psi$ depends at most cubically on the size of $\Phi$.
 \end{theorem}
 
 \begin{proof}
@@ -126,6 +126,7 @@ Since $\psi$ is connected and contains no identity or cut vertices, the mapping 
  }
 }\quad.
 \]
+We know that the size of $\Phi_\ttt$ and the size of $\Phi_\fff$ depend at most cubically on the size of $\Phi$ by Theorem~\vref{theorem:aiDecomposedForm} and Proposition~\vref{proposition:DerivationSubstitution}, and that the size of $\Psi$ depends at most quadratically on the size of $\alpha$ and $\beta$ by Lemma~\vref{lemma:GenericContraction}.
 \end{proof}
 %----------
 
@@ -327,7 +328,7 @@ Given an atom $a$, and a derivation $\Phi$ that is on simple form with respect t
 \item if $\Phi$ is weakly streamlined with respect to $b$, then $\ISR(\Phi,a)$ is weakly streamlined with respect to $b$, and
 \item if $\Phi$ is on simple form with respect to $b$, then $\ISR(\Phi,a)$ is on simple form with respect to $b$; and
 \end{itemize}
-\item the size of\/ $\ISR(\Phi,a)$ depends linearly on the size of\/ $\Phi$.
+\item the size of\/ $\ISR(\Phi,a)$ depends polynomially on the size of\/ $\Phi$.
 \end{enumerate}
 \end{proposition}
 
@@ -338,7 +339,7 @@ The statements follow by
 \begin{enumerate}
 \item Definition~\vref{definition:DerStreamlined} and Lemma~\vref{lemma:IsolatedSubflowRemovalPaths};
 \item Definitions~\ref{definition:DerStreamlined} and \ref{definition:DerSimpleForm}, and Lemma~\ref{lemma:IsolatedSubflowRemovalPaths};
-\item Proposition~\vref{proposition:DerivationSubstitution}, since the formulae we substitute with in the proof of Theorem~\vref{theorem:SoundIsolatedSubflowRemoval} have size 1.
+\item Theorem~\vref{theorem:SoundIsolatedSubflowRemoval}.
 \end{enumerate}
 \end{proof}
 %----------
